--- a/demos/dockview/src/modules/json-designer/json-editor/assets/css/common.scss
+++ b/demos/dockview/src/modules/json-designer/json-editor/assets/css/common.scss
@@ -1,4 +1,4 @@
-/* 公共的自定义函数 */
+/* Public custom functions */
 
 @function px2vw($px, $screen-width: 750) {
   @return ($px / $screen-width) * 100vw;
@@ -17,7 +17,7 @@
   height: 100%;
 }
 
-/* 头部细线 */
+/* Thin line at the head */
 @mixin borderTop {
   content: '';
   position: absolute;
@@ -30,7 +30,7 @@
   transform: scaleY(0.5);
 }
 
-/* 底部细线 */
+/* Thin line at the bottom */
 @mixin borderBtm {
   content: '';
   position: absolute;
@@ -43,44 +43,44 @@
   transform: scaleY(0.5);
 }
 
-/* 统一的内边距 */
+/* Uniform inner margins */
 @mixin unifiedPadding($value: 40) {
   padding: 0 px2rem($value) 0 px2rem($value);
 }
 
-/* 统一的左内边距 */
+/* Uniform left inner margin */
 @mixin unifiedLeftPadding($value: 40) {
   padding-left: px2rem($value);
 }
 
-/* 统一的右内边距 */
+/* Uniform right inner margin */
 @mixin unifiedRightPadding($value: 40) {
   padding-right: px2rem($value);
 }
 
-/* 统一的底部边框样式 */
+/* Uniform bottom border style */
 @mixin unifiedBottomBorder {
   border-bottom: 1px solid #ddd;
 }
 
-/* 统一的上边框样式 */
+/* Uniform top border style */
 @mixin unifiedTopBorder {
   border-top: 1px solid #ddd;
 }
 
-/* 统一的Item高度 */
+/* Uniform item height */
 @mixin unifiedItemHeight {
   line-height: px2rem(120);
   height: px2rem(120);
 }
 
-/* 设置行高样式 */
+/* Set line height style */
 @mixin setItemHeight($value: 120) {
   line-height: px2rem($value);
   height: px2rem($value);
 }
 
-/* 统一的Item样式 */
+/* Uniform Item Style */
 @mixin unifiedItemStyle {
   font-family: PingFangSC-Regular;
   font-size: px2rem(28);
@@ -88,7 +88,7 @@
   letter-spacing: 0;
 }
 
-/* 统一的弹性盒子样式 */
+/* Consistent flexbox style */
 @mixin unifiedFlexBoxStyle {
   display: flex;
   flex-wrap: nowrap;
@@ -96,14 +96,14 @@
   align-items: center;
 }
 
-/* 统一的Title样式 */
+/* Uniform Title Style */
 @mixin unifiedTitleStyle {
   font-family: PingFangSC-Regular;
   font-size: px2rem(40);
   color: #1e1e1e;
 }
 
-/* 统一的内容样式 */
+/* Uniform content style */
 @mixin unifiedContentStyle {
   font-family: PingFangSC-Regular;
   font-size: px2rem(28);
@@ -113,7 +113,7 @@
   line-height: px2rem(28);
 }
 
-/* 底部导航盒子样式 */
+/* Bottom navigation box style */
 @mixin fixedBottomBox {
   position: fixed;
   left: 0;
@@ -121,7 +121,7 @@
   width: 100%;
 }
 
-// 常用的变量
+// Commonly used variables
 $background-color: #fafafa;
 $border-color: #f7f7f7;
 $page-padding-top: px2rem(20);
